--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: lyx_app_upgrade
 description: A new Flutter project.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/youxinLu/lyx_app_upgrade
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
